--- a/src/ui/game/setup/configuration-menu.css
+++ b/src/ui/game/setup/configuration-menu.css
@@ -34,7 +34,7 @@ button {
     gap: 2rem;
 
     max-width: 800px;
-    width: 100vw;
+    width: 100%;
 }
 
 .option-group {
